--- a/css/main.css
+++ b/css/main.css
@@ -286,7 +286,8 @@ section .scrollBtn .btn-scroll {
     object-fit: contain;
     object-position: center;
     width: 100%;
-    border-radius: 15px;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 #uploadStory {
@@ -401,7 +402,8 @@ section .scrollBtn .btn-scroll {
     object-fit: contain;
     object-position: center;
     width: 100%;
-    border-radius: 15px;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .slide-nav {
