--- a/css/header.css
+++ b/css/header.css
@@ -148,3 +148,72 @@ input {
     height: 102px;
     width: 0;
 }
+
+.searchItem {
+    position: fixed;
+    background-color: #ffffffe0;
+    backdrop-filter: blur(5px);
+    width: 300px;
+    height: 400px;
+    z-index: 20;
+    top: 12%;
+    right: 19%;
+    border-radius: 20px 0px 20px 20px;
+    box-shadow: 20px 20px 50px rgb(0 0 0 / 50%);
+    overflow-y: auto;
+    overflow-x: hidden;
+    color: #000;
+}
+
+.searchItem a {
+    color: #000;
+}
+
+.searchItem .like {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+}
+
+.searchItem .userImg {
+    width: 54px;
+    height: 54px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto 8px;
+}
+
+.searchItem .userImg img {
+    object-fit: cover;
+    object-position: center;
+    height: 44px;
+    width: 44px;
+    border-radius: 50%;
+    border: 2px solid #000;
+}
+
+.searchItem .userDetail .username {
+    display: flex;
+    flex-direction: column;
+}
+
+.searchItem::-webkit-scrollbar {
+    display: none;
+}
+
+.searchItem {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.searchClose {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 15px;
+}
