--- a/css/message.css
+++ b/css/message.css
@@ -274,6 +274,14 @@ h5 {
     color: #000;
 }
 
+.deleteChat {
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    font-size: 30px;
+    font-weight: bold;
+}
+
 .userChat .user-1 img,
 .userChat .user-2 img {
     object-fit: cover;
