--- a/css/message.css
+++ b/css/message.css
@@ -234,7 +234,7 @@ h5 {
 }
 
 .chat .userChat .message-user {
-    display: flex!important;
+    display: flex !important;
     position: relative;
 }
 
@@ -330,7 +330,7 @@ h5 {
 }
 
 .text-center {
-    text-align: center!important;
+    text-align: center !important;
 }
 
 .alert-info {
@@ -345,4 +345,25 @@ h5 {
     margin-bottom: 1rem;
     border: 1px solid transparent;
     border-radius: .25rem;
+}
+
+@media only screen and (max-width: 425px) {
+    .chatUser {
+        width: 353px;
+    }
+    .chat {
+        width: 358px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .chatUser {
+        width: 290px;
+    }
+    .readerUser .reader {
+        font-size: 12px;
+    }
+    .chat {
+        width: 296px;
+    }
 }
