--- a/users/edit.css
+++ b/users/edit.css
@@ -162,3 +162,16 @@
     width: 25px;
     display: none;
 }
+
+@media only screen and (max-width: 320px) {
+    .edit_profile {
+        flex-direction: column;
+    }
+    .edit_profile {
+        width: 289px;
+    }
+    .edit_profile .edit_link {
+        display: flex;
+        width: 100%;
+    }
+}
