--- a/people/style.css
+++ b/people/style.css
@@ -106,6 +106,11 @@ body::after {
 h4,
 h5 {
     margin: 0;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color: #fff;
 }
 
 h4 {
@@ -198,4 +203,30 @@ h5 {
     font-weight: bold;
     border-radius: 10px;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 425px) {
+    .sfy h3 {
+        width: 350px;
+    }
+    .suggestions {
+        width: 350px;
+    }
+    h4,
+    h5 {
+        width: 116px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .sfy h3 {
+        width: 300px;
+    }
+    .suggestions {
+        width: 300px;
+    }
+    h4,
+    h5 {
+        width: 81px;
+    }
 }
